update admin layout

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <script src="https://kit.fontawesome.com/f7fcd28787.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/f7fcd28787.js" crossorigin="anonymous"></script> -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <!-- <script defer src="https://use.fontawesome.com/releases/v5.1.1/js/all.js" integrity="sha384-BtvRZcyfv4r0x/phJt9Y9HhnN5ur1Z+kZbKVgzVBAlQZX4jvAuImlIz+bG7TS00a" crossorigin="anonymous"></script> -->
   </head>
